--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,20 +1,46 @@
 @import "./_normalize";
 
 :root {
-  --primary-color: #241f11;
-  --accent-main-color: #9b1818;
+  --primary-color: #363636;
+  --accent-main-color: #9f141c;
   --light-color: #ffffff;
-  --bg-main-color: #9b1818;
+  --bg-main-color: #9f141c;
   --text-team-name: #f3ebe4;
   --light-bg: #f9f5f0;
   --test: #f0d2ad;
 }
 
 body {
-  font-family: "NotoSerif-Regular", sans-serif;
+  font-family: "Gilroy", sans-serif;
   background: #fff;
   color: var(--primary-color);
   line-height: 1.23;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  src: url("~/assets/fonts/Gilroy-LIght.ttf");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  src: url("~/assets/fonts/Gilroy-Semibold.ttf");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Gilroy";
+  src: url("~/assets/fonts/Gilroy-Medium.ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Gilroy";
+  src: url("~/assets/fonts/Gilroy-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
 }
 
 .container {
