fix footer and add sample section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,8 +6,7 @@
   --light-color: #ffffff;
   --bg-main-color: #9f141c;
   --text-team-name: #f3ebe4;
-  --light-bg: #f9f5f0;
-  --test: #f0d2ad;
+  --light-bg: #fffaf4;
 }
 
 body {
