Purchase and Commerce pages

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,8 +4,8 @@
   --primary-color: #363636;
   --accent-main-color: #9f141c;
   --light-color: #ffffff;
-  --bg-main-color: #9f141c;
-  --text-team-name: #f3ebe4;
+  --hover-color: #cd000c;
+  --text-team-name: #fdecdc;
   --light-bg: #fffaf4;
 }
 
