--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,7 +6,7 @@
   --light-color: #ffffff;
   --hover-color: #cd000c;
   --text-team-name: #fdecdc;
-  --light-bg: #fffaf4;
+  --light-bg: #e2e2e2;
 }
 
 body {
