--- a/styles/main.scss
+++ b/styles/main.scss
@@ -56,3 +56,9 @@ body {
     width: 1920px;
   }
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
