--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,6 +22,7 @@ body {
   src: url("~/assets/fonts/Gilroy-Light.ttf");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,18 +30,21 @@ body {
   src: url("~/assets/fonts/Gilroy-Semibold.ttf");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Gilroy";
   src: url("~/assets/fonts/Gilroy-Medium.ttf");
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "Gilroy";
   src: url("~/assets/fonts/Gilroy-Regular.ttf");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 .container {
