--- a/styles/main.scss
+++ b/styles/main.scss
@@ -66,3 +66,23 @@ input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.scrollbar {
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #9f141c;
+    border-radius: 5px;
+    // outline: 1px solid slategrey;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: rgba(187, 185, 185, 0.3);
+    border-radius: 5px;
+  }
+}
